MTButton: fixed text wrap bug | fixed all the warnings

--- a/src/components/resume/Work.css
+++ b/src/components/resume/Work.css
@@ -65,7 +65,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: start;
+    justify-content: flex-start;
     position: relative;
     /* top: 5px; */
     padding: 5px 0;
